# eka-mcp-sdk

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-01-abha-login-mobile.md
docs/superpowers/specs/: 2026-04-01-abha-login-mobile-design.md
eka_mcp_sdk/: __init__.py  server.py
eka_mcp_sdk/clients/: base_emr_client.py  eka_emr_client.py
eka_mcp_sdk/config/: settings.py
eka_mcp_sdk/services/: abha_service.py  appointment_service.py  doctor_clinic_service.py  patient_service.py
eka_mcp_sdk/tools/: abha_tools.py  appointment_tools.py  doctor_clinic_tools.py  models.py  patient_tools.py
eka_mcp_sdk/utils/: doctor_discovery_utils.py  tool_registration.py
tests/: run_tests.py  test_abha_service.py  test_client.py  test_patient_apis.py  test_settings.py
